# Ergenon-Systems

./: .gitignore  LICENSE  Makefile  README.md  boot.s  types.h
src/: boot.s  hal.c  hal.h  linker.ld
src/ada/: actuator_interface.ads  c_interface.adb  c_interface.ads  flight_controller.adb  flight_controller.ads  imu_driver.adb  imu_driver.ads  kalman_filter.adb  kalman_filter.ads  redundancy_manager.adb  redundancy_manager.ads
src/core/: adaptive_damage_control.c  aesa_radar_tasking_manager.c  ahrs_engine.c  autonomous_mission_planner.c  electronic_warfare_manager.c  eots_irst_manager.c  fdir_manager.c  flight_control_laws.c  flight_data_recorder.c  fuel_management_system.c  interrupt_manager.c  interrupt_manager.h  kernel.c  mpu.c  mpu.h  navigation_fusion_manager.c  neural_engine.c  neural_engine.h  power_thermal_manager.c  pvi_display_manager.c  scheduler.c  scheduler.h  secure_downlink_manager.c  sentinel_agent.c  sentinel_agent.h  sentinel_registry.c  sentinel_registry.h  situational_awareness_fusion.c  system_health_prognostics.c  timer_manager.c  timer_manager.h  types.h  voice_interaction_manager.c  weapon_systems_manager.c
src/hal/: adc_driver.c  adc_driver.h  can_driver.c  can_driver.h  gpio_driver.c  gpio_driver.h  i2c_driver.c  spi_driver.c  uart_driver.c  uart_driver.h
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/security/: boot_authenticator.c  boot_authenticator.h
test/: test_sentinel_agent.c  test_sentinel_registry.c
